<resources>
    <string name="app_name">Target AR Sample</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_label_scanartarget">Scan AR Target</string>
    <string name="button_label_user">User</string>
    <string name="button_label_dev_tools">Developer Tools</string>
    <string name="label_target_ar_view">Target AR View</string>
    <string name="button_label_screenshot">Screen Shot</string>
    <string name="button_label_record_video">Record Video</string>
    <string name="dialog_title_user">Current User</string>
    <string name="button_ok">OK</string>
    <string name="app_logo">App Logo</string>
    <string name="iar_target_sdk">Target SDK</string>
    <string name="no_video_file">No file saved, video Uri is null</string>
    <string name="no_screenshot_file">No screenshot saved, Uri is null</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="permissions_requested">All permissions requested are necessary for the app to run properly.</string>
    <string name="user_id">User ID:</string>
    <string name="instruction">Point your camera at an AR target to begin</string>
    <string name="no_network_connection">No network connection detected.</string>

</resources>