<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sampleApp_darkBlue"
    tools:context=".ui.fragments.main.MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_activity_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/splash_icon">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/iar_target_sdk"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scanButton"
            style="@style/main_button_style"
            android:contentDescription="@string/button_label_scanartarget"
            app:icon="@drawable/ic_baseline_scan_24"
            android:text="@string/button_label_scanartarget" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/userButton"
            style="@style/main_button_style"
            android:contentDescription="@string/button_label_user"
            app:icon="@drawable/ic_baseline_user_24"
            android:text="@string/button_label_user" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/devToolsButton"
            style="@style/main_button_style"
            android:contentDescription="@string/button_label_dev_tools"
            app:icon="@drawable/ic_baseline_code_24"
            android:text="@string/button_label_dev_tools" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>